Add hibernate entities, service interface, service impl, custom exceptions, mapstruct mappers
