# src/jvmMain/kotlin/scorewarrior/syncService/api/ElementTypes.kt
@@ -1,0 +1,6 @@
+package scorewarrior.syncService.api
+
+enum class ElementTypes(val value: String) {
+    HERO("hero"),
+    WEAPON("weapon")
+}
